@@ -22,6 +22,7 @@ ___
 * Login Widget to be used in login-pages, i.e. via `<bcd-loginng>` custom tag
 * new dataprovider options tblSelect, tblSelectRow, tblUpdate, tblInsert, tblDelete which offers wrs -> object -> wrs functions (currently limited to wrs)
 * added bcdui.bcdAlerter (.info/.warn/.error) to show a slide in alert
+* autogrow attribute for textarea widget
 .Security:
 .Development:
 .Bugfixes:
